2023-02-14 Jan Kotanski <jankotan@gmail.com>
	* set the signal from the FIO signalcounter parameter in nxsfileinfo attachment (#447)
	* fix setting the creationTime in FIO nxsfileinfo attachment (#447)
	* set the signal from the SignalCounter sardana variable in nxsfileinfo attachment (#449)
	* set the axes from the sardana scancommand first parameter in nxsfileinfo attachment (#449)
	* tagged as v3.41.0

2023-02-07 Jan Kotanski <jankotan@gmail.com>
	* take next axis if the first does not exist in nxsfileinfo attribute (#443)
	* tagged as v3.40.4

2023-02-06 Jan Kotanski <jankotan@gmail.com>
	* change --overwrite to --override in nxsfileinfo attachment (#440)
	* tagged as v3.40.3

2023-02-06 Jan Kotanski <jankotan@gmail.com>
	* do not create json for attachments without thumbnail (#437)
	* use first existing axis (#437)
	* tagged as v3.40.2

2023-01-31 Jan Kotanski <jankotan@gmail.com>
	* fix nxsfileinfo attachment help (#432)
	* tagged as v3.40.1

2023-01-31 Jan Kotanski <jankotan@gmail.com>
	* add nxsfileinfo sample and instrument metadata creators (#425)
	* add nxsfileinfo attachment metadata creators (#427)
	* tagged as v3.40.0

2023-01-12 Jan Kotanski <jankotan@gmail.com>
	* add sampledescription and sampledescriptiontext components (#421)
	* set metadata sampleId  --sample-id and --sample-id-from-name parameters (#421)
	* set metadata instrumentId with --instrument-id parameter (#422)
	* tagged as v3.39.0

2022-12-12 Jan Kotanski <jankotan@gmail.com>
	* add append_scicat_dataset function to pyeval.scdataset.py (#419)
	* add ndf to nexus file extension lists (#417)
	* fixes for missing fileformat (#417)
	* tagged as v3.38.0

2022-12-09 Jan Kotanski <jankotan@gmail.com>
	* fix for older versions of nxsdatawriter when fileformat is not defined
	* tagged as v3.37.1

2022-12-09 Jan Kotanski <jankotan@gmail.com>
	* support comments to copy map text list files (#409)
	* skip wrong copy map lines with circular dependence (#409)